--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,7 +161,12 @@ button:hover {
     max-width: 100%;
 }
 
+.bd {
+    border: 2px solid transparent;
+}
+
 .img {
+
     border-radius: 30px;
 }
 
@@ -208,6 +213,14 @@ input:focus {
     color: #cccccc;
 }
 
+.para {
+    max-width: 100%;
+}
+
+.para:hover {
+    background-color: greenyellow;
+}
+
 ul {
     margin-top: 0;
     margin-bottom: 0 !important;
@@ -232,6 +245,55 @@ ul {
     bottom: 7%;
     right: 7%;
 
+}
+
+
+
+
+
+.modal {
+    display: none;
+
+    position: fixed;
+
+    z-index: 1;
+    padding-top: 100px;
+
+    left: 0;
+    top: 0;
+    width: 100%;
+
+    height: 100%;
+
+    overflow: auto;
+
+    background-color: rgb(0, 0, 0);
+
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 @media (min-width:320px) {
